# dds10-thumbnailer-kde

./: CMakeLists.txt  DDS.h  README.md  readme  thumbnailer_dds10.cpp  thumbnailer_dds10.desktop  thumbnailer_dds10.json
